@@ -9,6 +9,9 @@
   - getattr() on relations/tag/... returned succesfully even if tag/
     didn't exist. Fixed.
 
+  - tagsistant_open(), tagsistant_read() and tagsistant_write() now
+    reuse the filehandle by saving it in fuse_file_info.fh field.
+
 0.6.1:
   - tag_id cache wasn't invalidated when a tag was renamed. Fixed.
     Thanks to Chiffa for reporting the bug.
